--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,11 +4,16 @@
 @tailwind components;
 @tailwind utilities;
 
-#app {
+@layer base {
+  html {
+    @apply text-neutral text-base;
+  }
+}
+
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-
   font-weight: normal;
 }
 
@@ -36,4 +41,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
